data/derived/comb/progs/unify/prog5581.ml.out
Characters 101-102:
  | Sine e		  -> sin(pi *. eval e)
                                ^
Error: This expression has type expr but an expression was expected of type
         expr * 'a * 'a
